fix banner shrinking when page content is too wide

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -6,6 +6,7 @@
 	bottom: 0;
 	display: flex;
 	flex-direction: column;
+	flex-shrink: 0;
 	grid-area: banner;
 	margin-left: var(--gutter);
 	max-height: 100vh;
